--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 <body>
     <h1>M y &nbsp &nbsp;    f a v o r i t e   &nbsp &nbsp;  c l i c k s</h1>
     <section class="gridcon">
-        <img src="photos/img1.jpg" class="pic">
-        <img src="photos/img2.jpg">
-        <img src="photos/img3.jpg">
-        <img src="photos/img4.jpg" class="pic2">
-        <img src="photos/img5.jpg">
-        <img src="photos/img6.jpg" class="pic2">
-        <img src="photos/img7.jpg">
-        <img src="photos/img8.jpg" class="pic">
-        <img src="photos/img9.jpg">
-        <img src="photos/img10.jpg">
-        <img src="photos/img11.jpg" class="pic2">
+        <img alt="image1" src="photos/img1.jpg" class="pic">
+        <img alt="image1" src="photos/img2.jpg">
+        <img alt="image1" src="photos/img3.jpg">
+        <img alt="image1" src="photos/img4.jpg" class="pic2">
+        <img alt="image1" src="photos/img5.jpg">
+        <img alt="image1" src="photos/img6.jpg" class="pic2">
+        <img alt="image1" src="photos/img7.jpg">
+        <img alt="image1" src="photos/img8.jpg" class="pic">
+        <img alt="image1" src="photos/img9.jpg">
+        <img alt="image1" src="photos/img10.jpg">
+        <img alt="image1" src="photos/img11.jpg" class="pic2">
+        <img src="photos/img12.jpg">
+        <img src="photos/img13.jpg">
+        <img src="photos/img14.jpg">
+        <img src="photos/img15.jpg">
+
     </section>
+    <br> <br> <br>
 </body>
 </html>
